--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,75 @@
 .App {
+  overflow: scroll;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+
+.sub-title {
+  color : white;
+  font-family: 'Lobster', cursive !important;
+  font-weight: 100 !important;
+  font-size: 30px;
+  text-align: center
+}
+
+.title-grad {
+  font-size: 36px;
+  background: linear-gradient(45deg, #a58fe9, #ff5566);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.page-title {
+  display: block;
+  width: fit-content;
   text-align: center;
+  font-size: 36px;
+  position: relative;
+  margin: 100px auto 50px auto;
+}
+.page-title:after {
+  position: absolute;
+  content: ' ';
+  top: 50%;
+  left: 100%;
+  margin: 0 10px;
+  width: 150px;
+  height: 5px;
+  background-color: white;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.page-title:before {
+  position: absolute;
+  content: ' ';
+  top: 50%;
+  right: 100%;
+  margin: 0 10px;
+  width: 150px;
+  height: 5px;
+  background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tags  {
+  padding: 5px 10px;
+  height : 30px;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: 1px solid #a58fe9;
+  background-color: rgba(255, 255, 255, 0.808);
+  word-wrap: break-word;
+  word-break: keep-all;
+  font-size: 12px;
+  color: #a58fe9 !important;
+  -webkit-background-clip: initial;
+  -webkit-text-fill-color: initial;
 }
