--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,53 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  font-family: 'Muli', sans-serif;
+  background-image: url(/static/img/overlay1.png), url(/static/img/overlay2.svg), linear-gradient(#e37682, #5f4d93);
+  background-color: #e37682;
+  background-attachment: fixed;
+  background-position: top left, center center, center center;
+  background-size: auto, cover, cover;
+  color: #a58fe9;
+  overflow-y: scroll;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@media all and (max-width : 980px) {
+  body {
+    background-image: url(/static/img/overlay2.svg);
+  }
+}
+
+html::-webkit-scrollbar {
+  appearance: none;
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  appearance: none;
+  width: 10px;
+  background-color: #ffffff;
+}
+
+html::-webkit-scrollbar-thumb {
+  appearance: none;
+  width: 10px;
+  background-color: #ff6272;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  appearance: none;
+  width: 10px;
+  background-color: #ff5566;
+}
+
+a {
+  text-decoration: none;
+  color: initial;
 }
