--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -4,16 +4,18 @@
   width: 90%;
 }
 
-@media only screen and (min-width : 601px) {
+@media only screen and (min-width: 601px) {
   .container {
     width: 85%;
   }
 }
-@media only screen and (min-width : 993px) {
+
+@media only screen and (min-width: 993px) {
   .container {
     width: 70%;
   }
 }
+
 .col .row {
   margin-left: -0.75rem;
   margin-right: -0.75rem;
@@ -23,12 +25,15 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+
 .section.no-pad {
   padding: 0;
 }
+
 .section.no-pad-bot {
   padding-bottom: 0;
 }
+
 .section.no-pad-top {
   padding-top: 0;
 }
@@ -38,201 +43,254 @@
   margin-right: auto;
   margin-bottom: 20px;
 }
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
+
 .row .col {
   float: left;
   box-sizing: border-box;
   padding: 0 0.75rem;
   min-height: 1px;
 }
-.row .col[class*=push-], .row .col[class*=pull-] {
+
+.row .col[class*=push-],
+.row .col[class*=pull-] {
   position: relative;
 }
+
 .row .col.s1 {
   width: 8.3333333333%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s2 {
   width: 16.6666666667%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s3 {
   width: 25%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s4 {
   width: 33.3333333333%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s5 {
   width: 41.6666666667%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s6 {
   width: 50%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s7 {
   width: 58.3333333333%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s8 {
   width: 66.6666666667%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s9 {
   width: 75%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s10 {
   width: 83.3333333333%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s11 {
   width: 91.6666666667%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.s12 {
   width: 100%;
   margin-left: auto;
   left: auto;
   right: auto;
 }
+
 .row .col.offset-s1 {
   margin-left: 8.3333333333%;
 }
+
 .row .col.pull-s1 {
   right: 8.3333333333%;
 }
+
 .row .col.push-s1 {
   left: 8.3333333333%;
 }
+
 .row .col.offset-s2 {
   margin-left: 16.6666666667%;
 }
+
 .row .col.pull-s2 {
   right: 16.6666666667%;
 }
+
 .row .col.push-s2 {
   left: 16.6666666667%;
 }
+
 .row .col.offset-s3 {
   margin-left: 25%;
 }
+
 .row .col.pull-s3 {
   right: 25%;
 }
+
 .row .col.push-s3 {
   left: 25%;
 }
+
 .row .col.offset-s4 {
   margin-left: 33.3333333333%;
 }
+
 .row .col.pull-s4 {
   right: 33.3333333333%;
 }
+
 .row .col.push-s4 {
   left: 33.3333333333%;
 }
+
 .row .col.offset-s5 {
   margin-left: 41.6666666667%;
 }
+
 .row .col.pull-s5 {
   right: 41.6666666667%;
 }
+
 .row .col.push-s5 {
   left: 41.6666666667%;
 }
+
 .row .col.offset-s6 {
   margin-left: 50%;
 }
+
 .row .col.pull-s6 {
   right: 50%;
 }
+
 .row .col.push-s6 {
   left: 50%;
 }
+
 .row .col.offset-s7 {
   margin-left: 58.3333333333%;
 }
+
 .row .col.pull-s7 {
   right: 58.3333333333%;
 }
+
 .row .col.push-s7 {
   left: 58.3333333333%;
 }
+
 .row .col.offset-s8 {
   margin-left: 66.6666666667%;
 }
+
 .row .col.pull-s8 {
   right: 66.6666666667%;
 }
+
 .row .col.push-s8 {
   left: 66.6666666667%;
 }
+
 .row .col.offset-s9 {
   margin-left: 75%;
 }
+
 .row .col.pull-s9 {
   right: 75%;
 }
+
 .row .col.push-s9 {
   left: 75%;
 }
+
 .row .col.offset-s10 {
   margin-left: 83.3333333333%;
 }
+
 .row .col.pull-s10 {
   right: 83.3333333333%;
 }
+
 .row .col.push-s10 {
   left: 83.3333333333%;
 }
+
 .row .col.offset-s11 {
   margin-left: 91.6666666667%;
 }
+
 .row .col.pull-s11 {
   right: 91.6666666667%;
 }
+
 .row .col.push-s11 {
   left: 91.6666666667%;
 }
+
 .row .col.offset-s12 {
   margin-left: 100%;
 }
+
 .row .col.pull-s12 {
   right: 100%;
 }
+
 .row .col.push-s12 {
   left: 100%;
 }
-@media only screen and (min-width : 601px) {
+
+@media only screen and (min-width: 601px) {
   .row .col.m1 {
     width: 8.3333333333%;
     margin-left: auto;
@@ -414,7 +472,8 @@
     left: 100%;
   }
 }
-@media only screen and (min-width : 993px) {
+
+@media only screen and (min-width: 993px) {
   .row .col.l1 {
     width: 8.3333333333%;
     margin-left: auto;
@@ -596,7 +655,8 @@
     left: 100%;
   }
 }
-@media only screen and (min-width : 1201px) {
+
+@media only screen and (min-width: 1201px) {
   .row .col.xl1 {
     width: 8.3333333333%;
     margin-left: auto;
@@ -780,18 +840,23 @@
 }
 
 /* flex */
+
 .flx-wrapper {
   display: flex;
 }
+
 .row.flx {
   display: flex;
 }
+
 .col.flx {
   flex: 1;
 }
+
 .flx.wrap {
   flex-wrap: wrap;
 }
+
 .flx.center {
   justify-content: center;
 }
