--- a/src/css/App.css
+++ b/src/css/App.css
@@ -88,6 +88,16 @@
   opacity: 0.1
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
 
 @media all and (max-width: 900px) {
   .bg-wave {
